syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.client.contract.user";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc GetUserInfo (UserRequest) returns (ResponseResult) {
  }
}

message UserRequest {
  int64 userId = 1;
}

message ResponseResult {
  int64 code = 1;
  string msg = 2;
  map<string, string> data = 3;
}